# collection

./: README
framework/: game.py  main.py  map.py  mapdata.py  mon.py  oldmain.py  whatisthis
opengl/: CMakeLists.txt  README  car.c  car.cpp  car.h  cartest.cpp  compthing  mission  tank.cpp  tank.h  test.cpp  testcomp  thing.cpp  wlib.cpp  wlib.h
other/: twistex.py
r4game/: LICENSE  README  abminimax.py  hashmm.py  human.py  minimaxsimple.py  r42server.py  r4server.py  simpleai.py
